--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <!-- endbower -->
 
     <!-- Smoke -->
-    <script src="dist/js/smoke.js"></script>
+    <script src="dist/js/smoke.min.js"></script>
     <!-- Scripts -->
     <script src="js/scripts.js"></script>
 
